bug: input overflowing container

--- a/src/boggle.css
+++ b/src/boggle.css
@@ -29,6 +29,7 @@ input {
   line-height: inherit;
   margin: 0;
   padding: 0;
+  box-sizing: border-box;
 }
 
 .Block {
